		* Generation of equidistant values: allow to fix the number of values and the increment at the same time
		* Support parsing more functions and operators for formulas and expressions
		* Add support to show the Sparkline of each respective column
		* Add triangular distributions (PDF, CDF) to parser and random number generation
	* [notebook]
		* Export to PDF
		* "Configure CAS" in the menu to create a new notebook to directly allow the user to enable new backends in case not done yet
		* In case the correct path to a CAS like Maxima, etc. was configured, allow to use it without restarting LabPlot
		* Allow to show variable statistics and to plot data from the context menu in the project explorer similarly to spreadsheet columns
	* [import]
		* Templates for ASCII and Binary import filters - allow to save and load current filter settings
		* Support data import from ODS (Open Document Spreadsheet) files
		* When importing tables from SQL databases, allow to specify which data region to read (start/end values for columns and records)
		* Add seaborn's datasets to the collection of datasets
		* Properly handle out-of-memory situations when importing large amount of data
		* Better reporting of error messages in the import dialog
		* BLF
			* show additional information about the file (application name the file was created with, etc.) in the import dialog
		* OPJ:
			* Properly import projects having graphs with multiple axes (BUG 476355)
			* correctly import font sizes and legend fixes (#839)
			* improved text and legend label and positioning
			* import histogram and error bars
	* [analysis]
		* Add note for fit results

Performance improvements:
	* Make baseline removal much faster by using Eigen3 library (optional dependency)
	* Refactor formula parsing including better error handling
	* Reduced the memory consumption during the import of BLF files.

Bug fixes:
	* Support host processes (latex, octave, etc.) in sandboxed builds (like Flatpak)